src/objects/pse__Time_Variance_Detail__c.object
<CustomObject>
    <customHelpPage>pse__TimeVarianceHelp</customHelpPage>
    <description>Contains time variance calculation details for a single region, practice, or group.  FinancialForce PSA calculates time variance as a percentage based on the number of approved working hours divided into the number of recorded working hours. You can reflect this as a percentage or as strict hours. Time variance calculations are a lookup to the Time Variance Calculation object.</description>
    <fields>
        <fullName>pse__Allowed_Variance_Over__c</fullName>
        <label>Allowed Variance Over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Allowed_Variance_Under__c</fullName>
        <label>Allowed Variance Under</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours__c</fullName>
        <description>The number of submitted hours that are billable.</description>
        <inlineHelpText>The number of submitted hours that are billable.</inlineHelpText>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Hours__c</fullName>
        <description>The number of submitted hours that are credited.</description>
        <inlineHelpText>The number of submitted hours that are credited.</inlineHelpText>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Billable_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies that billable hours were excluded when this Time Variance was calculated.</description>
        <inlineHelpText>Specifies that billable hours were excluded when this Time Variance was calculated.</inlineHelpText>
        <label>Exclude Billable Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Credited_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies that credited hours were excluded when this Time Variance was calculated.</description>
        <inlineHelpText>Specifies that credited hours were excluded when this Time Variance was calculated.</inlineHelpText>
        <label>Exclude Credited Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Excluded_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies that excluded hours were excluded when this Time Variance was calculated.</description>
        <inlineHelpText>Specifies that excluded hours were excluded when this Time Variance was calculated.</inlineHelpText>
        <label>Exclude Excluded Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <description>The number of submitted hours that are excluded.</description>
        <inlineHelpText>The number of submitted hours that are excluded.</inlineHelpText>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Time Variances</relationshipLabel>
        <relationshipName>Time_Variances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Nonbillable_Hours__c</fullName>
        <description>The number of submitted hours that are non-billable.</description>
        <inlineHelpText>The number of submitted hours that are non-billable.</inlineHelpText>
        <label>Non-billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Time Variances</relationshipLabel>
        <relationshipName>Time_Variances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Time Variances</relationshipLabel>
        <relationshipName>Time_Variances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Variance Details</relationshipLabel>
        <relationshipName>Time_Variance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Variance_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Variance Calculation</label>
        <referenceTo>pse__Time_Variance_Calculation__c</referenceTo>
        <relationshipLabel>Time Variance Details</relationshipLabel>
        <relationshipName>Time_Variance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Total_Hours__c</fullName>
        <label>Total Hours Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Variance__c</fullName>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar_Hours__c</fullName>
        <description>The number of hours from the Resource&apos;s Work Calendar.</description>
        <inlineHelpText>The number of hours from the Resource&apos;s Work Calendar.</inlineHelpText>
        <label>Work Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Variance</label>
    <nameField>
        <displayFormat>TV-{0}</displayFormat>
        <label>Time Variance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Variances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>